--- a/package.json
+++ b/package.json
@@ -9,15 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^10.0.4",
+    "@react-three/fiber": "^9.1.0",
     "aos": "^2.3.4",
-    "framer-motion": "^12.4.7",
+    "framer-motion": "^12.5.0",
     "gsap": "^3.12.7",
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.15.1",
-    "react-use": "^17.6.0"
+    "react-use": "^17.6.0",
+    "recharts": "^2.15.1",
+    "tailwind-scrollbar-hide": "^2.0.0",
+    "three": "^0.174.0"
   },
   "devDependencies": {
     "postcss": "^8",
