--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@react-three/drei": "^10.0.4",
     "@react-three/fiber": "^9.1.0",
     "aos": "^2.3.4",
@@ -19,6 +20,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.15.1",
+    "react-router-dom": "^7.4.1",
     "react-use": "^17.6.0",
     "recharts": "^2.15.1",
     "tailwind-scrollbar-hide": "^2.0.0",
