--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "@fontsource/rubik": "^5.2.5",
     "@react-three/drei": "^10.0.4",
     "@react-three/fiber": "^9.1.0",
     "aos": "^2.3.4",
@@ -23,6 +24,7 @@
     "react-router-dom": "^7.4.1",
     "react-use": "^17.6.0",
     "recharts": "^2.15.1",
+    "swiper": "^11.2.6",
     "tailwind-scrollbar-hide": "^2.0.0",
     "three": "^0.174.0"
   },
